--- a/CSS/sunny-style.css
+++ b/CSS/sunny-style.css
@@ -25,6 +25,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;   
+    float: left;
 }
 
 .menu li {
@@ -39,7 +40,7 @@ body{
 }
 
 .menu.active li {
-    transform: rotate(calc(360deg / 7 * var(--i)));
+    transform: rotate(calc(360deg / 6* var(--i)));
 
 }
 .menu li a 
@@ -51,7 +52,7 @@ body{
     height: 40px;
     background: #fff;
     border-radius: 50%;
-    transform: rotate(calc(360deg / -7 * var(--i)));
+    transform: rotate(calc(360deg / -6 * var(--i)));
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
     color: #111;
     transition: 0.5s;
@@ -82,127 +83,21 @@ body{
 }
 
 .rightcolumn{
-    width: 90%;
-    float: right;
+  margin: 20px;
+  padding:20px;
+    width: 75%;
+    float: left;
 }
 
+.container{
+  padding: 10px;
+
+  border-style: solid;
+  border-color: #fff;
+}
+
+.container h2{
+  text-align: center;
+}
 /* Section */
 
-.container {
-  border-top-left-radius: 37px 140px;
-  border-top-right-radius: 23px 130px;
-  border-bottom-left-radius: 110px 19px;
-  border-bottom-right-radius: 120px 24px;
-
-  display: block;
-  position: relative;
-  border: solid 3px black;
-  padding: 40px 60px;
-  max-width: 900x;
-  width: 70%;
-  margin: 100px auto 0;
-  font-size: 17px;
-  line-height: 28px;
-  transform: rotate(-1deg);
-  box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
-  transition: all 0.13s ease-in;
-}
-
-.container:hover {
-  transform: translateY(-10px) rotate(1deg);
-  box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
-}
-
-.container:hover .border {
-  transform: translateY(4px) rotate(-5deg);
-}
-
-.border {
-  position: absolute;
-  transition: all 0.13s ease-in;
-}
-
-.border:before,
-.border:after {
-  color: #515d9c;
-  font-size: 15px;
-  position: absolute;
-}
-
-.tl {
-  position: absolute;
-  left: -50px;
-  top: -63px;
-  font-weight: 600;
-}
-
-.tl:before {
-  content: "37px";
-  left: 120px;
-  top: 30px;
-}
-
-.tl:after {
-  content: "140px";
-  left: 0px;
-  top: 80px;
-}
-
-.tr {
-  right: -50px;
-  top: -63px;
-  font-weight: 600;
-}
-
-.tr:before {
-  content: "23px";
-  left: 0;
-  top: 30px;
-}
-
-.tr:after {
-  content: "130px";
-  left: 130px;
-  top: 80px;
-}
-
-.bl {
-  left: -50px;
-  bottom: -71px;
-  font-weight: 600;
-}
-
-.bl:before {
-  content: "110px";
-  left: 120px;
-  top: -30px;
-}
-
-.bl:after {
-  content: "19px";
-  left: 0px;
-  top: -90px;
-}
-
-.br {
-  right: -50px;
-  bottom: -63px;
-  font-weight: 600;
-}
-
-.br:before {
-  content: "120px";
-  left: 0;
-  top: -30px;
-}
-
-.br:after {
-  content: "24px";
-  right: -10px;
-  top: -80px;
-}
-
-pre {
-  background: #edeff5;
-  padding: 20px;
-}
